IGNITE-19436 Add "--add-opens=java.base/java.time=ALL-UNNAMED" to jvm args