@@ -73,6 +73,7 @@ if %java_version% GEQ 15 (
     --add-opens=java.base/java.lang.invoke=ALL-UNNAMED ^
     --add-opens=java.base/java.math=ALL-UNNAMED ^
     --add-opens=java.sql/java.sql=ALL-UNNAMED ^
+    --add-opens=java.sql/java.time=ALL-UNNAMED ^
     %current_value%
 )
 
