@@ -70,6 +70,7 @@ getJavaSpecificOpts() {
           --add-opens=java.base/java.lang.invoke=ALL-UNNAMED \
           --add-opens=java.base/java.math=ALL-UNNAMED \
           --add-opens=java.sql/java.sql=ALL-UNNAMED \
+          --add-opens=java.sql/java.time=ALL-UNNAMED \
           ${current_value}"
   fi
 
